# ssd-benchy

./: .gitignore  .gitmodules  Cargo.toml  lsyncd_config.conf.lua  run_exp.sh
plot/: plot.r  summary_file.csv  summary_file_12xlarge_1.csv  summary_file_12xlarge_2.csv
src/: main.rs
uring_batching/: build.zig  build.zig.zon  readme.md
uring_batching/src/: main.zig
