[package]
name = "ssd-benchy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version ="4.5.4", features = ["derive"] }
csv = "1.3.0"
fastrand = "2.1.0"
gethostname = "0.4.3"
libc = "0.2.153"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.8.0", features =  [ "v4", "v7"]}
